@startuml
package Model as ModelPkg {
    class Model {
        notify()
    }

    class Observer {
        Update(const& Model);
    }
    package ModelUT {}
}

package Controller as ControllerPkg {
    class Controller
    package ControllerUT {}
}

package View as ViewPkg {
    class View {
        Update(const& Model);
    }
    package ViewUT {}
}

package GuiFrameWork { }

View -up-|> Observer
Model-left->Observer
ModelUT-->Model
Controller->Model
ControllerUT-left->Controller
View->GuiFrameWork
ViewUT->View
Controller->GuiFrameWork

@enduml

